--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./dist/App.js",
     "dev": "nodemon",
     "compile": "tsc",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --coverage"
   },
   "author": "",
   "license": "ISC",
